# phantom-filler

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: DeployAll.s.sol  DeployFiller.s.sol  DeploySettlement.s.sol
contracts/src/: PhantomFiller.sol
contracts/src/interfaces/: IFiller.sol  IReactor.sol  ISettlement.sol  ISignatureTransfer.sol
contracts/src/types/: OrderTypes.sol
contracts/test/: OrderTypes.t.sol
crates/phantom-api/: Cargo.toml
crates/phantom-api/src/: lib.rs  server.rs  state.rs  ws.rs
crates/phantom-chain/: Cargo.toml
crates/phantom-chain/src/: events.rs  lib.rs  mempool.rs  provider.rs  stream.rs
crates/phantom-chain/tests/: integration.rs
crates/phantom-common/: Cargo.toml
crates/phantom-common/src/: error.rs  lib.rs  traits.rs
crates/phantom-common/src/types/: chain.rs  mod.rs  order.rs  token.rs
crates/phantom-discovery/: Cargo.toml
crates/phantom-discovery/src/: lib.rs  monitor.rs  orderbook.rs
crates/phantom-execution/: Cargo.toml
crates/phantom-execution/src/: builder.rs  lib.rs  relay.rs  wallet.rs
crates/phantom-filler/: Cargo.toml
crates/phantom-filler/src/: main.rs
crates/phantom-filler/tests/: integration_api.rs  integration_config.rs  integration_pipeline.rs
crates/phantom-inventory/: Cargo.toml
crates/phantom-inventory/src/: lib.rs  risk.rs
crates/phantom-metrics/: Cargo.toml
crates/phantom-metrics/src/: lib.rs  prometheus.rs
crates/phantom-pricing/: Cargo.toml
crates/phantom-pricing/src/: aggregator.rs  gas.rs  lib.rs
crates/phantom-settlement/: Cargo.toml
crates/phantom-settlement/src/: lib.rs  retry.rs
crates/phantom-strategy/: Cargo.toml
crates/phantom-strategy/src/: arb.rs  lib.rs  pipeline.rs  registry.rs  simulation.rs
docker/: init.sql
migrations/: 20260301000000_initial_schema.sql  20260301000001_add_pnl_table.sql
