[package]
name = "phantom-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
alloy.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest.workspace = true
