[package]
name = "phantom-execution"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-common.workspace = true
phantom-chain.workspace = true
tokio.workspace = true
alloy.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
