[package]
name = "phantom-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
