[package]
name = "phantom-pricing"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-common.workspace = true
phantom-chain.workspace = true
tokio.workspace = true
alloy.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
chrono.workspace = true
serde.workspace = true
reqwest.workspace = true

[dev-dependencies]
proptest.workspace = true
